# iot_universal_hub

./: README.md
components/bt/host/nimble/nimble/nimble/host/services/gap/src/: ble_svc_gap.c
components/bt/host/nimble/nimble/nimble/host/services/hid/src/: ble_svc_hid.c
components/bt/host/nimble/nimble/nimble/host/services/lls/src/: ble_svc_lls.c
components/bt/host/nimble/nimble/nimble/host/services/sps/src/: ble_svc_sps.c
components/bt/host/nimble/nimble/nimble/host/src/: ble_att_svr.c  ble_gap.c  ble_gattc.c  ble_hs_hci.c  ble_hs_hci_evt.c
components/hue/: hue.c  hue.h
examples/get-started/hello_world/: sdkconfig
examples/get-started/hello_world/main/: hello_world_main.c  hello_world_main.c.save
examples/protocols/http_server/simple/: CMakeLists.txt  sdkconfig
examples/protocols/http_server/simple/main/: CMakeLists.txt  http_utils.c  http_utils.h  hub_interface.h  hue.c  hue.h  main.c  tradfri.c  tradfri.h  web_ui.html  web_ui_html.c
examples/wifi/getting_started/station/: sdkconfig  sdkconfig.old
my_webserver/: CMakeLists.txt  sdkconfig  sdkconfig.old
my_webserver/.cache/clangd/index/: my_webserver.c.C24721C4DEBCEC23.idx
my_webserver/main/: CMakeLists.txt  my_webserver.c
my_webserver/spiffs/: find_hubs.html  index.html
smart_hub/: CMakeLists.txt  sdkconfig
smart_hub/main/: CMakeLists.txt  device_control.c  device_control.h  gateway_nrf.c  gateway_nrf.h  index.html  main.c  mdns_discovery.c  mdns_discovery.h  ssdp_discovery.c  ssdp_discovery.h  web_server.c  web_server.h  wifi_manager.c
